updated landing page

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <div class="view-more-news">View More News</div>
   
 	</div>
-</div><br><br><br>
+</div><br><br><br><br>
   <!-- // END OF NEWS SECTION  -->
 <!-- /////////////////////////////////////////// -->
 
