added video for header

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <!-- // VIDEO AND OVERLAY  -->
     <div class="overlay"></div>
-    <video autoplay muted loop id="video-bg"><source src="assets/mp4/blackandwhite.mp4" type="video/mp4"></video>
+    <video autoplay muted loop id="video-bg"><source src="assets/mp4/combined.mp4" type="video/mp4"></video>
     <img src="assets/images/blackandwhite.jpg" id="mobile-bg">
     <!-- // END OF VIDEO AND OVERLAY  -->
   
