added trial experience page

--- a/awardsachievements.html
+++ b/awardsachievements.html
@@ -57,7 +57,7 @@
                   <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
                   <li><a href="#" id="dropdown-community">In the Community</a></li>
                   <li><a href="#">Landmark Cases</a></li>
-                  <li><a href="#">Trial Experience</a></li>
+                  <li><a href="#" id="dropdown-trialexperience">Trial Experience</a></li>
                   <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
                   <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
                 </ul>
