--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/awards.css">
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
     <link rel="stylesheet" href="assets/css/news.css">
+    <link rel="stylesheet" href="assets/css/cont.css">
      <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
@@ -53,7 +54,7 @@
                   <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
                   <li><a href="#" id="dropdown-community">In the Community</a></li>
                   <li><a href="#">Landmark Cases</a></li>
-                  <li><a href="#">Trial Experience</a></li>
+                  <li><a href="#" id="dropdown-trialexperience">Trial Experience</a></li>
                   <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
                   <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
                 </ul>
@@ -287,7 +288,13 @@
 
 <!-- /////////////////////////////////////////// -->
 <!-- // UKNOWN SECTION AT THE MOMENT  -->
-<div class="bg-image whiteglobe"></div>
+<div class="bg-image whiteglobe">
+
+  <!-- // contact us  -->
+
+  <!-- // end of contact us -->
+
+</div>
 <!-- // END OF UKNOWN SECTION AT THE MOMENT  -->
 <!-- /////////////////////////////////////////// -->
 
