--- a/trialexperience.html
+++ b/trialexperience.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="assets/css/news-LP.css"> -->
+    <link rel="stylesheet" href="assets/css/trialexperience.css">
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
     <link rel="stylesheet" href="assets/css/navbar-logo-white.css">
-    <link rel="stylesheet" href="assets/css/globalsecurities.css">
+
      <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
@@ -66,7 +67,7 @@
             <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
               <ul class="dropdown">
                 <li><a href="#" id="dropdown-USsecurities">U.S. Securities</a></li>
-                  <li><a href="#" id="dropdown-globalsecurities">Global Securities</a></li>
+                <li><a href="#" id="dropdown-globalsecurities">Global Securities</a></li>
                   <li><a href="#">Mergers & Acquisitions</a></li>
                   <li><a href="#">Shareholder Derivative</a></li>
                   <li><a href="#" id="dropdown-corporategov">Corporate Governance</a></li>
@@ -117,37 +118,25 @@
 <!-- // END OF NAV BAR & HEADER (WHITE BACKGROUND)-->
 <!-- /////////////////////////////////////////// -->
 
-<br><br><br>
-<!-- <div class="bg-image whiteglobe-sub"></div> -->
+<br><div class="bg-image whiteglobe-sub"></div>
+
 
 <!-- /////////////////////////////////////////// -->
-<!-- BEGINNING OF GLOBAL SECURITIES SECTION -->
- <div id="project">
-	<!-- actual content -->
-	
-	<div class="overlapping-feature__container">
-		<div class="overlapping-feature">
+<!-- BEGINNING OF TRIAL EXPERIENCE SECTION -->
+<!-- // COMMUNITY HEADER-->
+<div class="trial-header" data-aos="fade-down">
+    TRIAL EXPERIENCE 
+  </div>
+ <!-- // END OF COMMUNITY HEADER -->
 
-			<div class="overlapping-feature__image overlapping-feature--left" data-aos="fade-right">
-				<!-- set the image in the page CSS -->
-			</div>
-
-			<div class="overlapping-feature__content overlapping-feature--right overlapping-feature--center"data-aos="fade-left">
-				<div class="overlapping-feature--center">
-          <div class="practice-area">PRACTICE AREA</div>
-          <div class="associated-cases">ASSOCIATED CASES</div>
-					<h2>GLOBAL SECURITIES</h2>
-					<p>Investment strategies today transcend national borders. Unfortunately, so does fraud. Our Global Securities Litigation group is dedicated to helping investors prosecute corporate fraud claims and recover assets around the world. </p>
-					<p>Notably, the Firm has been at the forefront of representing institutional investors in non-U.S. jurisdictions in light of the Supreme Court’s 2010 decision in <i>Morrison v. National Australia Bank</i>.  The Firm has previously, or is currently representing institutional investors in actions in Canada, Brazil, Australia, the Netherlands, the United Kingdom, France, Germany, Portugal, and Japan.<br><br></p>
-        </div>
-			</div>
-
-		</div>
-	</div>
-	
-	<!-- End of content -->
+ <div class="trial-section">
+    <div class="container"> 
+        
+    </div>
 </div>
-<!-- END OF GLOBAL SECURITIES SECTION  -->
+
+
+<!-- END OF TRIAL EXPERIENCE SECTION -->
 <!-- /////////////////////////////////////////// -->
 
 
