--- a/insights.html
+++ b/insights.html
@@ -96,7 +96,7 @@
 
             <li><a href="#">CONTACT</a>
               <ul class="dropdown">
-                  <    <li><a href="#" id="dropdown-offices">Offices</a></li>
+                 <li><a href="#" id="dropdown-offices">Offices</a></li>
                   <li><a href="#">Careers</a></li>
                   <li><a href="#">General Inquiry</a></li>
                   <li><a href="#">Report Fraud</a></li>
