--- a/FAQs.html
+++ b/FAQs.html
@@ -61,9 +61,9 @@
                 </ul>
               </li>
 
-            <li><a href="#">PEOPLE</a>
-            </li>
-
+              <li><a href="#" id="dropdown-people">PEOPLE</a>
+              </li>
+              
             <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
               <ul class="dropdown">
                 <li><a href="#" id="dropdown-USsecurities">U.S. Securities</a></li>
