--- a/people.html
+++ b/people.html
@@ -60,7 +60,7 @@
                 </ul>
               </li>
 
-            <li><a href="#">PEOPLE</a>
+            <li><a href="#" id="dropdown-people">PEOPLE</a>
             </li>
 
             <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
