--- a/community.html
+++ b/community.html
@@ -62,8 +62,8 @@
                 </ul>
               </li>
 
-            <li><a href="#">PEOPLE</a>
-            </li>
+              <li><a href="#" id="dropdown-people">PEOPLE</a>
+              </li>
 
             <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
               <ul class="dropdown">
