updated peoples page to have filters

--- a/people.html
+++ b/people.html
@@ -118,7 +118,7 @@
 <!-- /////////////////////////////////////////// -->
 
 <br>
-<div class="bg-image whiteglobe-sub"></div>
+<!-- <div class="bg-image whiteglobe-sub"></div> -->
 
 
 <!-- /////////////////////////////////////////// -->
@@ -130,16 +130,46 @@
   </div>
  <!-- // END OF PEOPLE HEADER -->
 
+ <!-- // ALPHABET OF PEOPLE -->
  <div class="alpha-head">
   <div class="devsite-products-alphabet devsite-section-back-to-top-target">
   <a class="devsite-products-alphabet-link" href="#a" id="a">A</a><a class="devsite-products-alphabet-link" href="#b" id="b">B</a><a class="devsite-products-alphabet-link" href="#c" id="c">C</a><a class="devsite-products-alphabet-link" href="#d" id="d">D</a><a class="devsite-products-alphabet-link" href="#e">E</a><a class="devsite-products-alphabet-link" href="#f">F</a><a class="devsite-products-alphabet-link" href="#g">G</a><a class="devsite-products-alphabet-link" href="#h">H</a><a class="devsite-products-alphabet-link" href="#i">I</a><a class="devsite-products-alphabet-link" href="#j">J</a><a class="devsite-products-alphabet-link" href="#k">K</a><a class="devsite-products-alphabet-link" href="#l">L</a><a class="devsite-products-alphabet-link" href="#m">M</a><a class="devsite-products-alphabet-link" href="#n">N</a><a class="devsite-products-alphabet-link" href="#o">O</a><a class="devsite-products-alphabet-link" href="#p">P</a><a class="devsite-products-alphabet-link" href="#q">Q</a><a class="devsite-products-alphabet-link" href="#r">R</a><a class="devsite-products-alphabet-link" href="#s">S</a><a class="devsite-products-alphabet-link" href="#t">T</a><a class="devsite-products-alphabet-link" href="#u">U</a><a class="devsite-products-alphabet-link" href="#v">V</a><a class="devsite-products-alphabet-link" href="#w">W</a><a class="devsite-products-alphabet-link" href="#x">X</a><a class="devsite-products-alphabet-link" href="#y">Y</a><a class="devsite-products-alphabet-link" href="#z">Z</a>
 </div>
 </div>
+<!-- // END OF ALPHABET OF PEOPLE  -->
+
+<!-- // SEARCH FILTER  -->
+<div class="container">
+<div class="row">
+  
+  <div class="col-md-6">
+  <div class="search-name">SEARCH BY NAME</div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="search-name">SEARCH BY POSITION</div>
+  </div>
+</div>
+
+<div class="row">
+  
+  <div class="col-md-6">
+  <div class="search-name">SEARCH BY PRACTICE AREA</div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="search-name">SEARCH BY LOCATION</div>
+  </div>
+</div>
+</div>
+
+
+<!-- // END OF SEARCH FILTER -->
 
 
 <div class="container"> 
 
-    <div class="people-section" data-aos="fade-down">
+    <div class="people-section">
       
         <!-- Our team Section -->
 <section id="team" class="team content-section">
