updated peoples page with photos

--- a/people.html
+++ b/people.html
@@ -179,31 +179,31 @@
             <div class="col-md-4">
               <div class="team-member">
                 <figure>
-                  <img src="assets/images/professionals/alavi.png" alt="" class="img-responsive">
+                  <img src="assets/images/professionals/alavi2.png" alt="" class="img-responsive">
                   <figcaption>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                     <ul>
-                      <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
                 <h4>ASHER S. ALAVI</h4>
-                <p>ASSOIATE</p>
+                <p>ASSOCIATE</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
   
             <div class="col-md-4">
               <div class="team-member">
                 <figure>
-                  <img src="assets/images/professionals/albert.png" alt="" class="img-responsive">
+                  <img src="assets/images/professionals/albert2.png" alt="" class="img-responsive">
                   <figcaption>
                     <p>Neque minima ea, a praesentium saepe nihil maxime quod esse numquam explicabo eligendi.</p>
                     <ul>
-                      <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
@@ -219,9 +219,9 @@
                   <figcaption>
                     <p>Temporibus dolor, quisquam consectetur molestias, veniam voluptatum. Beatae alias omnis totam.</p>
                     <ul>
-                      <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
@@ -242,9 +242,9 @@
                   <figcaption>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                     <ul>
-                      <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
@@ -257,17 +257,78 @@
             <div class="col-md-4">
                 <div class="team-member">
                   <figure>
-                    <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
+                    <img src="assets/images/professionals/baker.jpg" alt="" class="img-responsive">
                     <figcaption>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                       <ul>
-                        <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                        <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                        <li><a href=""><i class="fas fa-phone"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>NAUMON A. AMJED</h4>
+                  <h4>DANIEL M. BAKER</h4>
+                  <p>ASSOCIATE</p>
+                </div><!-- /.team-member-->
+              </div><!-- /.col-md-4 -->
+  
+           
+              <div class="col-md-4">
+                <div class="team-member">
+                  <figure>
+                    <img src="assets/images/professionals/barksdale.png" alt="" class="img-responsive">
+                    <figcaption>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <ul>
+                        <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                        <li><a href=""><i class="fas fa-phone"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      </ul>
+                    </figcaption>
+                  </figure>
+                  <h4>LAMARLON R. BARKSDALE</h4>
+                  <p>STAFF ATTORNEY</p>
+                </div><!-- /.team-member-->
+              </div><!-- /.col-md-4 -->
+  
+  
+          </div><!-- /.row -->
+
+          <div class="row">
+  
+            <div class="col-md-4">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/barlieb.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <h4>ETHAN J. BARLIEB</h4>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            
+            <div class="col-md-4">
+                <div class="team-member">
+                  <figure>
+                    <img src="assets/images/professionals/bell.png" alt="" class="img-responsive">
+                    <figcaption>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <ul>
+                        <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                        <li><a href=""><i class="fas fa-phone"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      </ul>
+                    </figcaption>
+                  </figure>
+                  <h4>ADRIENNE P. BELL</h4>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -276,7 +337,7 @@
               <div class="col-md-4">
                 <div class="team-member">
                   <figure>
-                    <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
+                    <img src="assets/images/professionals/benedict.png" alt="" class="img-responsive">
                     <figcaption>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                       <ul>
@@ -286,7 +347,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>NAUMON A. AMJED</h4>
+                  <h4>MATTHEW C. BENEDICT</h4>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -299,17 +360,17 @@
             <div class="col-md-4">
               <div class="team-member">
                 <figure>
-                  <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
+                  <img src="assets/images/professionals/berman.png" alt="" class="img-responsive">
                   <figcaption>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                     <ul>
-                      <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>NAUMON A. AMJED</h4>
+                <h4>STUART L. BERMAN</h4>
                 <p>PARTNER</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -318,17 +379,17 @@
             <div class="col-md-4">
                 <div class="team-member">
                   <figure>
-                    <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
+                    <img src="assets/images/professionals/bocian.png" alt="" class="img-responsive">
                     <figcaption>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                       <ul>
-                        <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                        <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                        <li><a href=""><i class="fas fa-phone"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>NAUMON A. AMJED</h4>
+                  <h4>DAVID A. BOCIAN</h4>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -337,18 +398,18 @@
               <div class="col-md-4">
                 <div class="team-member">
                   <figure>
-                    <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
+                    <img src="assets/images/professionals/calhoun.png" alt="" class="img-responsive">
                     <figcaption>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                       <ul>
-                        <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                        <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                        <li><a href=""><i class="fas fa-phone"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>NAUMON A. AMJED</h4>
-                  <p>PARTNER</p>
+                  <h4>ELIZABETH W. CALHOUN</h4>
+                  <p>STAFF ATTORNEY</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
   
@@ -360,17 +421,17 @@
             <div class="col-md-4">
               <div class="team-member">
                 <figure>
-                  <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
+                  <img src="assets/images/professionals/castaldo.png" alt="" class="img-responsive">
                   <figcaption>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                     <ul>
-                      <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                      <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>NAUMON A. AMJED</h4>
+                <h4>GREGORY M. CASTALDO</h4>
                 <p>PARTNER</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -379,17 +440,17 @@
             <div class="col-md-4">
                 <div class="team-member">
                   <figure>
-                    <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
+                    <img src="assets/images/professionals/check.jpg" alt="" class="img-responsive">
                     <figcaption>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                       <ul>
-                        <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                        <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                        <li><a href=""><i class="fas fa-phone"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>NAUMON A. AMJED</h4>
+                  <h4>DARREN J. CHECK</h4>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -398,17 +459,17 @@
               <div class="col-md-4">
                 <div class="team-member">
                   <figure>
-                    <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
+                    <img src="assets/images/professionals/christiansen.png" alt="" class="img-responsive">
                     <figcaption>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
                       <ul>
-                        <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                        <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                        <li><a href=""><i class="fas fa-phone"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>NAUMON A. AMJED</h4>
+                  <h4>EMILY N. CHRISTIANSEN</h4>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
